<resources>
    <string name="app_name">MyNewApplication</string>
    <string name="jfk">JFK</string>
    <string name="sea">SEA</string>
    <string name="new_york_city">NEW YORK CITY</string>
    <string name="seattle">SEATTLE</string>
    <string name="_8_00am">8:00AM</string>
    <string name="departure">DEPART</string>
    <string name="arrive">ARRIVE</string>
    <string name="_11_17am">11:17AM</string>
    <string name="passenger">Passenger</string>
    <string name="aknazar_tiumenbaev">Aknazar Tiumenbaev</string>
    <string name="_7_30am">7:30AM</string>
    <string name="boarding_begins">BOARDING BEGINS</string>
    <string name="d2218">D2218</string>
    <string name="flight">FLIGHT</string>
    <string name="d4">D4</string>
    <string name="gate">GATE</string>
    <string name="_6c">6C</string>
    <string name="seat">SEAT</string>
</resources>