<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/blue"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
    android:id="@+id/delta_logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_delta_air_lines_vector_logo"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
     />
    <ImageView
        android:id="@+id/plane_icon"
        android:rotation="@android:integer/config_mediumAnimTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_airplanemode_active_24"
        app:layout_constraintStart_toStartOf="@id/image_view"
        app:layout_constraintTop_toTopOf="@id/image_view"
        app:layout_constraintEnd_toEndOf="@id/image_view"
        android:layout_marginTop="50dp"
        />
    <TextView
        style="@style/textSize2"
        android:id="@+id/text_view_psngr"
        android:text="@string/passenger"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/image_view"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/image_view"
        android:layout_marginStart="40dp"
        />
    <TextView
        style="@style/textSize2"
        android:id="@+id/text_view_name"
        android:text="@string/aknazar_tiumenbaev"
        app:layout_constraintStart_toEndOf="@id/text_view_psngr"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/image_view"
        android:layout_marginStart="10dp"
        />
    <TextView
       style="@style/textSize3"
        android:id="@+id/text_view_1"
        android:text="@string/jfk"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="@id/image_view"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="@id/image_view"
        />
    <TextView
        style="@style/textSize3"
        android:id="@+id/text_view_2"
        android:text="@string/sea"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@id/image_view"
        app:layout_constraintTop_toTopOf="@id/image_view"
        android:layout_marginEnd="60dp"
        />
    <TextView
        style="@style/textSize2"
        android:id="@+id/text_view_3"
        android:text="@string/new_york_city"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_view_1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_1"
        />
    <TextView
        style="@style/textSize2"
        android:id="@+id/text_view_4"
        android:text="@string/seattle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_view_2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_2"
        />
    <TextView
        style="@style/textSize3"
        android:id="@+id/text_view_5"
        android:text="@string/_8_00am"
        app:layout_constraintStart_toStartOf="@id/text_view_6"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="@id/image_view"
        />
    <TextView
        style="@style/textSize4"
        android:id="@+id/text_view_6"
        android:text="@string/departure"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_view_3"
        app:layout_constraintBottom_toTopOf="@id/text_view_5"
        />
    <TextView
        style="@style/textSize3"
        android:id="@+id/text_view_7"
        android:text="@string/_11_17am"
        app:layout_constraintStart_toStartOf="@id/text_view_8"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="@id/image_view"
        />
    <TextView
        style="@style/textSize4"
        android:id="@+id/text_view_8"
        android:text="@string/arrive"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_view_4"
        app:layout_constraintBottom_toTopOf="@id/text_view_5"
        />
    <TextView
        style="@style/textSize1"
        android:id="@+id/text_view_9"
        android:text="@string/_7_30am"
        app:layout_constraintStart_toStartOf="@id/text_view_5"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        />
    <TextView
        style="@style/textSize2"
        android:id="@+id/text_view_10"
        android:text="@string/boarding_begins"
        app:layout_constraintStart_toStartOf="@id/text_view_9"
        app:layout_constraintBottom_toTopOf="@id/text_view_9"
        />
    <TextView
        style="@style/textSize1"
        android:id="@+id/text_view_11"
        android:text="@string/d2218"
        app:layout_constraintStart_toEndOf="@id/text_view_9"
        android:layout_marginTop="55dp"
        android:layout_marginStart="90dp"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        />
    <TextView
        style="@style/textSize2"
        android:id="@+id/text_view_12"
        android:text="@string/flight"
        app:layout_constraintStart_toStartOf="@id/text_view_11"
        app:layout_constraintBottom_toTopOf="@id/text_view_11"
        />
    <TextView
        style="@style/textSize1"
        android:id="@+id/text_view_13"
        android:text="@string/d4"
        app:layout_constraintStart_toStartOf="@id/text_view_9"
        app:layout_constraintTop_toBottomOf="@id/text_view_14"
        android:layout_marginTop="5dp"
        />
    <TextView
        style="@style/textSize2"
        android:id="@+id/text_view_14"
        android:text="@string/gate"
        app:layout_constraintStart_toStartOf="@id/text_view_9"
        app:layout_constraintTop_toTopOf="@id/qr_code"
        android:layout_marginTop="0dp"
        />
    <TextView
        style="@style/textSize1"
        android:id="@+id/text_view_15"
        android:text="@string/_6c"
        app:layout_constraintStart_toStartOf="@id/text_view_13"
        app:layout_constraintBottom_toBottomOf="@id/qr_code"
        />
    <TextView
        style="@style/textSize2"
        android:id="@+id/text_view_16"
        android:text="@string/seat"
        app:layout_constraintStart_toStartOf="@id/text_view_13"
        app:layout_constraintBottom_toTopOf="@id/text_view_15"
        android:layout_marginTop="0dp"
        />
    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_new_qr_code"
        app:layout_constraintStart_toStartOf="@id/text_view_11"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_11"
        />


</androidx.constraintlayout.widget.ConstraintLayout>